--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>MODULO 2</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/style.css">
+    <title>MODULO 2 + CONTROL GITHUB</title>
   </head>
   <body>
-    A
+    <h1>Comenzando con la fotografía</h1>
+    <br>
+    <div id="contenido">
+    <section>
+      <article id="Img1">
+        <center>
+        	<img src="img/dog.jpg" alt="Perro" style="width: 80%" >
+        </center>
+      </article>
+    </section>
+  </div>
+<br>
+<footer>
+
+</footer>
+
   </body>
 </html>
