--- a/index.html
+++ b/index.html
@@ -6,19 +6,25 @@
     <link rel="stylesheet" href="estilos/style.css">
     <title>MODULO 2 + CONTROL GITHUB</title>
   </head>
-  <body>
-    <h1>Comenzando con la fotografía</h1>
-    <br>
+  <body >
     <div id="contenido">
-    <section>
-      <article id="Img1">
+      <div class="emcabezado">
+        <h1>Comenzando con la fotografía</h1>
+      </div>
+      <div class="img_principal">
         <center>
-        	<img src="img/dog.jpg" alt="Perro" style="width: 80%" >
+          <img src="img/dog.jpg" alt="Perro" style="width: 100%" >
         </center>
-      </article>
-    </section>
+      </div>
+    <div class="img_secundaria">
+      <div id="izquierda">
+        <img src="img/gato1.jpg" alt="gato1" style="width:100%">
+      </div>
+      <div id="derecha">
+        <img src="img/gato1.jpg" alt="gato2" style="width:100%">
+      </div>
+    </div>
   </div>
-<br>
 <footer>
 
 </footer>
