--- a/paisajes.html
+++ b/paisajes.html
@@ -16,7 +16,7 @@
         font-size: 40px
       }
     </style>
-  </head>
+  </head class="efecto">
   <body >
     <div id="contenido">
       <nav class="emcabezado">
@@ -27,24 +27,24 @@
       </nav>
       <div class="img_principal">
         <div id="izquierda">
-          <img src="img/gato1.jpg" alt="gato1" style="width:40%">
+          <img id="img3" src="img/gato1.jpg" alt="gato1" style="width:40%">
         </div>
         <div id="derecha">
-          <img src="img/gato1.jpg" alt="gato3" style="width:40%">
+          <img id="img2" src="img/gato1.jpg" alt="gato3" style="width:40%">
         </div>
         <div id="centro">
-          <img src="img/gato1.jpg" alt="gato3" style="width:40%">
+          <img id="img1" src="img/gato1.jpg" alt="gato3" style="width:40%">
         </div>
       </div>
     <div class="img_secundaria">
       <div id="izquierda">
-        <img src="img/gato1.jpg" alt="gato1" style="width:40%">
+        <img id="img6" src="img/gato1.jpg" alt="gato1" style="width:40%">
       </div>
       <div id="derecha">
-        <img src="img/gato1.jpg" alt="gato3" style="width:40%">
+        <img id="img5" src="img/gato1.jpg" alt="gato3" style="width:40%">
       </div>
       <div id="centro">
-        <img src="img/gato1.jpg" alt="gato3" style="width:40%">
+        <img id="img4" src="img/gato1.jpg" alt="gato3" style="width:40%">
       </div>
     </div>
     <footer class="pie_pagina">
