--- a/index.html
+++ b/index.html
@@ -1,87 +1,86 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos/style.css">
-    <title>MODULO 2 + CONTROL GITHUB</title>
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap">
-    <style>
-      body {
-        font-family: 'Dancing Script', cursive;
-      }
-      h1 {
-        font-family: 'Dancing Script', cursive;
-        font-size: 40px
-      }
-    </style>
-  </head>
-  <body >
-    <div id="contenido">
-      <nav class="emcabezado">
-    	<h1>Comenzando con la fotografía</h1>
-    	<div class="menu">
-    	<a href="./paisajes.html">Paissajes</a> | <a href="./retratos.html">Retratos</a> | <a href="./index.html">Menu</a>
-    	</div>
-      </nav>
-      <div class="img_principal">
-        <center>
-          <img src="img/dog.jpg" alt="Perro" style="width: 50%" >
-        </center>
-      </div>
-    <div class="img_secundaria">
-      <div id="izquierda">
-        <img src="img/gato1.jpg" alt="gato1" style="width:50%">
-      </div>
-      <div id="derecha">
-        <img src="img/gato1.jpg" alt="gato2" style="width:50%">
-      </div>
-    </div>
-    <footer class="pie_pagina">
-    		<div class="pagina_pie">
-    			<ul>
-    			<li class="Contacto">Contacto</li>
-    				<li>
-    				michael.pineres@gmail.com
-    				</li>
-    				<li>
-    				Cr 5 57-24 Sur
-    				</li>
-    				<li>
-    				3212704548
-    				</li>
-    			</ul>
-    			<ul>
-    			<li class="Terminos">Terminos</li>
-    				<li>
-    				Derechos reservador para mcpc
-    				</li>
-    			</ul>
-    			<ul>
-    			<li class="Redes">Redes</li>
-    				<li>
-    				<a href="URL" target="_blank"><img alt="siguenos en facebook" height="40" src="https://img.icons8.com/color/48/000000/facebook.png" title="siguenos en facebook" width="40" />Facebook</a>
-    				</li>
-    				<li>
-    				<a href="URL" target="_blank"><img alt="siguenos en gmail" height="40" src="https://img.icons8.com/color/48/000000/gmail.png" title="siguenos en gmail" width="40" />Gmail</a>
-    				</li>
-    				<li>
-    				<a href="URL" target="_blank"><img alt="siguenos en twitter" height="40" src="https://img.icons8.com/color/48/000000/twitter.png" title="siguenos en twitter" width="40" />Twitter</a>
-    				</li>
-    			</ul>
-    			<ul>
-    			<li class="Derechos">Derechos</li>
-    				<li>
-    				Michael Piñeres
-    				</li>
-    				<li>
-    				© CopyRight 2019
-    				</li>
-    			</ul>
-    		</div>
-    	</footer>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="estilos/style.css">
+  <title>MODULO 2 + CONTROL GITHUB</title>
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap">
+  <style>
+    body {
+      font-family: 'Dancing Script', cursive;
+    }
+    h1 {
+      font-family: 'Dancing Script', cursive;
+      font-size: 40px
+    }
+  </style>
+</head>
+<body>
+<div class="contenido">
+
+<div class="header">
+  <h1>Comenzando con la fotografía</h1>
+  <p><a href="./paisajes.html">Paissajes</a> | <a href="./retratos.html">Retratos</a> | <a href="./index.html">Menu</a></p>
+</div>
+
+<div class="row">
+  <div class="column" id="imgprincipal">
+    <img class="colmg1" src="img/dog.jpg" style="width:100%">
   </div>
 
-  </body>
+  <div class="column" id="imgsegundaria">
+    <img class="col2" src="img/dog.jpg" style="width:100%">
+    <img class="col3" src="img/dog.jpg" style="width:100%">
+  </div>
+
+  <div class="column">
+    <footer class="pie_pagina">
+        <div class="pagina_pie">
+          <ul>
+          <li class="Contacto">Contacto</li>
+            <li>
+            michael.pineres@gmail.com
+            </li>
+            <li>
+            Cr 5 57-24 Sur
+            </li>
+            <li>
+            3212704548
+            </li>
+          </ul>
+          <ul>
+          <li class="Terminos">Terminos</li>
+            <li>
+            Derechos reservador para mcpc
+            </li>
+          </ul>
+          <ul>
+          <li class="Redes">Redes</li>
+            <li>
+            <a href="URL" target="_blank"><img alt="siguenos en facebook" height="40" src="https://img.icons8.com/color/48/000000/facebook.png" title="siguenos en facebook" width="40" />Facebook</a>
+            </li>
+            <li>
+            <a href="URL" target="_blank"><img alt="siguenos en gmail" height="40" src="https://img.icons8.com/color/48/000000/gmail.png" title="siguenos en gmail" width="40" />Gmail</a>
+            </li>
+            <li>
+            <a href="URL" target="_blank"><img alt="siguenos en twitter" height="40" src="https://img.icons8.com/color/48/000000/twitter.png" title="siguenos en twitter" width="40" />Twitter</a>
+            </li>
+          </ul>
+          <ul>
+          <li class="Derechos">Derechos</li>
+            <li>
+            Michael Piñeres
+            </li>
+            <li>
+            © CopyRight 2019
+            </li>
+          </ul>
+        </div>
+      </footer>
+    </div>
+  </div>
+</div>
+</body>
 </html>
